--- a/index.html
+++ b/index.html
@@ -3866,9 +3866,8 @@ async function carregarBarbeirosPrincipal(containerId, isGuest = false) {
                       <div class="card-header-info">
                           <h4 class="professional-name-card">${b.nome}</h4>
                           ${distanciaTexto}
-                          ${reputacaoHtml} {/* <-- REPUTAÇÃO MOVIDA PARA CÁ */}
+                          ${reputacaoHtml} 
                       </div>
-                      {/* O <div class="card-reputacao">...</div> foi REMOVIDO daqui */}
                   </div>
                   ${statusHtml}
                   ${promocoesHtml}
