--- a/index.html
+++ b/index.html
@@ -9006,7 +9006,7 @@ function handleDeepLink() {
 
 // --- NOVAS FUNÇÕES Nova Versão ---
 
-function iniciarOnboarding() {
+function abrirOnboarding() {
     const modal = document.getElementById('modalOnboarding');
     modal.style.display = 'flex';
     setTimeout(() => modal.classList.add('show'), 10);
