--- a/index.html
+++ b/index.html
@@ -9006,7 +9006,7 @@ function handleDeepLink() {
 
 // --- NOVAS FUNÇÕES Nova Versão ---
 
-function abrirOnboarding() {
+function iniciarOnboarding() {
     const modal = document.getElementById('modalOnboarding');
     modal.style.display = 'flex';
     setTimeout(() => modal.classList.add('show'), 10);
@@ -9228,7 +9228,7 @@ async function iniciarFluxoDeConfiguracaoProfissional() {
 // =====================================================================
 
 // --- ETAPA 1: SERVIÇOS ---
-function iniciarOnboardingProfissionalEtapa1() {
+function abrirOnboardingEtapa1() {
     etapaAtualOnboarding = 1;
     onboardingServicos = []; // Limpa
     
