--- a/index.html
+++ b/index.html
@@ -8781,6 +8781,7 @@ async function verificarPendencias(uid) {
     }
 }
 
+// SUBSTITUA A FUNÇÃO 'verificarPendenciasEssenciaisProfissional' INTEIRA EM index.html
 async function verificarPendenciasEssenciaisProfissional(uid) {
     // 1. Se já estiver no fluxo de onboarding (etapaAtualOnboarding > 0)
     // 2. OU se o onboarding inicial ainda não foi concluído (precisaConfiguracaoInicial === true)
@@ -8797,35 +8798,27 @@ async function verificarPendenciasEssenciaisProfissional(uid) {
 
     // 1. Verifica Serviços
     if (!p.listaServicos || p.listaServicos.length === 0) {
-        exibirPopup("Configuração Pendente", "Você precisa cadastrar pelo menos um serviço.", 'aviso', () => {
-            abrirOnboardingEtapa1();
-        });
-        return; // Para aqui
+        exibirPopup("Configuração Pendente", "Você precisa cadastrar pelo menos um serviço.");
+        return abrirOnboardingEtapa1(); // Para aqui
     }
     
     // 2. Verifica Logomarca
     if (!p.logo_url) {
-        exibirPopup("Configuração Pendente", "Você precisa enviar sua logomarca.", 'aviso', () => {
-            abrirOnboardingEtapa4();
-        });
-        return; // Para aqui
+        exibirPopup("Configuração Pendente", "Você precisa enviar sua logomarca.");
+        return abrirOnboardingEtapa4(); // Para aqui
     }
     
     // 3. Verifica Portfólio
     if (!p.portfolio || p.portfolio.length === 0) {
-        exibirPopup("Configuração Pendente", "Seu portfólio está vazio. Adicione pelo menos uma foto.", 'aviso', () => {
-            abrirOnboardingEtapa5();
-        });
-        return; // Para aqui
+        exibirPopup("Configuração Pendente", "Seu portfólio está vazio. Adicione pelo menos uma foto.");
+        return abrirOnboardingEtapa5(); // Para aqui
     }
 
     // 4. Verifica Agenda (só se vaga imediata E agenda manual estiverem inativas)
     const temHorarioManual = Object.values(p.agenda || {}).some(v => v === true);
     if (!p.vagaImediata && !temHorarioManual) {
-        exibirPopup("Configuração Pendente", "Sua agenda parece estar desativada. Configure-a.", 'aviso', () => {
-            abrirOnboardingEtapa3();
-        });
-        return; // Para aqui
+        exibirPopup("Configuração Pendente", "Sua agenda parece estar desativada. Configure.");
+        return abrirOnboardingEtapa3(); // Para aqui
     }
 
     // 5. Popup 2 (Promoção) NÃO é verificado aqui, pois é opcional.
