--- a/index.html
+++ b/index.html
@@ -6826,6 +6826,7 @@ async function adminMudarTipoUsuario(uid, novoTipo) {
 
         // Em vez de reiniciar a tela do admin, apenas reabrimos o modal para ver a mudança
          abrirModalGerenciarUsuario(uid); // Reabre o modal do usuário gerenciado
+         location.reload();
 
 
     } catch (error) {
