--- a/index.html
+++ b/index.html
@@ -6827,7 +6827,7 @@ async function adminMudarTipoUsuario(uid, novoTipo) {
         // Em vez de reiniciar a tela do admin, apenas reabrimos o modal para ver a mudança
          abrirModalGerenciarUsuario(uid); // Reabre o modal do usuário gerenciado
          location.reload();
-
+         abrirModalGerenciarUsuario(uid);
 
     } catch (error) {
         // Em caso de erro
