--- a/index.html
+++ b/index.html
@@ -1020,6 +1020,7 @@ padding-right: 10px; /* Espaço para a barra de rolagem */
 #modalOnboardingAgenda .modal-content,
 #modalOnboardingLogomarca .modal-content,
 #modalOnboardingPortfolio .modal-content {
+    overflow-y: auto;
     max-height: 90vh;
     display: flex; 
     flex-direction: column; /* <-- ESTA É A CORREÇÃO PRINCIPAL */
